# hdlskel

./: .gitignore  LICENSE  README.md  hdldepends.toml  vhdl_ls.toml
fw/lib/vhdl/: adder_tree.vhd  mux.vhd  mux_1hot.vhd  reduce_bitwise_tree.vhd
fw/lib/vhdl/pkg/: basic_pkg.vhd  misc_pkg.vhd  vec_pkg.vhd
fw/lib/vhdl/ramface/: ramface_pkg.vhd  ramface_regs_k.vhd  ramface_regs_rw.vhd  ramface_rply_combine.vhd  ramface_rqst_local_decode.vhd  ramface_sim_pkg.vhd
fw/lib/vhdl/skmap/: skmap_module.vhd  skmap_pkg.vhd  smkap_map_acc_pkg.vhd
fw/pip/tbskel/src/tbskel/: ramface.py  regio  regio.py
fw/tb/ramface/tb_ramface_regs/: run.sh  tb_ramface_regs.vhd
fw/tb/ramface/tb_ramface_regs_viv/: tb_ramface_regs_viv.vhd
fw/tb/skmap/tb_py_skmap_module_acc_types/: run.sh  skmap_module_test_acc_types.vhd  test_skmap_module_test_acc_types.py
fw/tb/skmap/tb_py_skmap_module_basic/: run.sh  tbskel  test_skmap_module.py
fw/tb/skmap/tb_py_skmap_module_recipe/: recipe_test_bench_module.py  recipe_test_bench_module.toml  recipe_test_bench_module.vhd  regio  run.py  run.sh  skmap  skmap_module_recipe.toml  test_skmap_module_recipe.py  test_skmap_module_recipe_regio_tcp_client.py
fw/tb/skmap/tb_py_skmap_tree/: regio  run.py  run.sh  skmap  tbskel  test_skamp_tree_module.toml  test_skmap_tree.py  test_skmap_tree_module.toml  test_skmap_tree_top.vhd
fw/tb/skmap/tb_skmap_module_basic/: run.sh  tb_skmap_module_basic.vhd
pip/regio/: pyproject.toml
pip/regio/src/: regio_tcp_op.py  test_file_cache.py
pip/regio/src/regio/: __init__.py  file_cache.py  regio.py  tcp.py  tcp_client.py  tcp_server.py  tcp_server_asyncio.py
pip/skmap/: pyproject.toml
pip/skmap/src/: check_recipe.py  generate_cpp.py  generate_py.py  generate_vhdl.py
pip/skmap/src/skmap/: __init__.py  basic.py  basic_skmap.py  basic_types.py  code_generator_cpp.py  code_generator_parse_recipe.py  code_generator_py.py  code_generator_sw_common.py  code_generator_vhdl.py  head.py  module.py  parse_recipe.py  reg.py  reg_map_table.py  regio  regio.py
sw/: meson.build
sw/app/regio_tcp/: main.cpp  meson.build
sw/app/skmap/: main.cpp  meson.build
sw/lib/cpp/regio/: meson.build
sw/lib/cpp/regio/include/hdlskel/regio/: regio.hpp
sw/lib/cpp/regio/src/: regio.cpp
sw/lib/cpp/regio_tcp/: meson.build
sw/lib/cpp/regio_tcp/include/hdlskel/regio/tcp/: regio_tcp.hpp  regio_tcp_client.hpp
sw/lib/cpp/regio_tcp/src/: regio_tcp.cpp  regio_tcp_client.cpp
sw/lib/cpp/skmap/: meson.build
sw/lib/cpp/skmap/include/hdlskel/skmap/: basic_types.hpp  head.hpp  module.hpp  reg.hpp
sw/lib/cpp/skmap/src/: basic_types.cpp  head.cpp  module.cpp  reg.cpp
sw/lib/cpp/skmap_autogen/: meson.build
sw/lib/cpp/skmap_autogen/include/hdlskel/skmap/autogen/: recipe_test_bench_module.hpp
sw/lib/cpp/skmap_autogen/src/: recipe_test_bench_module.cpp
sw/subprojects/: tabulate.wrap
